<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <requestFocus />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:weightSum="1"
            app:contentInsetStart="@null"
            app:elevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:theme="@style/AppTheme.RelativeLayout.Parent">

                <com.example.searchgithub.utils.CustomEditText
                    android:id="@+id/textSearch"
                    style="@style/AppTheme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_white"
                    android:drawableStart="@drawable/ic_search"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="@dimen/component_big"
                    android:hint="@string/text_search"
                    android:inputType="textPersonName"
                    app:Amfont="medium" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/errorLayout"
        style="@style/AppTheme.RelativeLayout.Parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <com.example.searchgithub.utils.CustomTextView
            android:id="@+id/textCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_404"
            android:textSize="@dimen/text_extra"
            app:Amfont="bold" />

        <com.example.searchgithub.utils.CustomTextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/component_big"
            android:paddingRight="@dimen/component_big"
            android:text="@string/text_data_is_not_found"
            android:textSize="@dimen/text_medium"
            app:Amfont="regular" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLayout"
        style="@style/AppTheme.RelativeLayout.Parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorWhiteTransparent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/component_big" />

        <com.example.searchgithub.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_searching"
            android:textSize="@dimen/text_extra"
            app:Amfont="bold" />

        <com.example.searchgithub.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_please_waiting"
            android:textSize="@dimen/text_medium"
            app:Amfont="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>